--- a/index.html
+++ b/index.html
@@ -60,6 +60,11 @@
         /></a>
         <button class="arrow" data-direction="forward">→</button>
       </div>
+      <div class="links">
+        <a href="https://github.com/kalexei/image-carousel" target="_blank"
+          >Github</a
+        >
+      </div>
     </div>
   </body>
 </html>
